<resources>
    <string name="app_name">TrackGymProgress</string>
    <string name="title_activity_workout_type">WorkoutTypeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>

    <string name="WORKOUT_DAY_KEY">Day</string>
    <string name="WORKOUT_MUSCLE_KEY">MuscleType</string>
    <string name="EXERCISE_TYPE_KEY">ExerciseType</string>
    <string name="EXERCISE_KEY">Exercises</string>
    <string name="FIREBASE_URL">https://workoutdatabase-c73bc-default-rtdb.firebaseio.com/</string>
    <string name="legs">LEGS</string>
    <string name="pull">PULL</string>
    <string name="push">PUSH</string>
    <string name="set">Set</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="edit">Edit</string>
    <string name="muscle_group">Muscle group:</string>
    <string name="muscle_type">Muscle Type</string>
    <string name="exercise_group">Exercise group</string>
    <string name="exercise_type">Exercise Type:</string>
    <string name="exercises">Exercises</string>
    <string name="name">Name:</string>
    <string name="weight">Weight:</string>
    <string name="sets">Sets:</string>
    <string name="reps">Reps:</string>
</resources>