<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/pushBtn"
        android:layout_width="136dp"
        android:layout_height="91dp"
        android:text="@string/push"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/legsBtn"
        app:layout_constraintEnd_toStartOf="@id/pullBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pullBtn"
        android:layout_width="136dp"
        android:layout_height="91dp"
        android:text="@string/pull"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/legsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pushBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/legsBtn"
        android:layout_width="136dp"
        android:layout_height="91dp"
        android:text="@string/legs"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>